# interaction_system

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: command_handler.rs  element.rs  game.rs  interaction.rs  item_registry.rs  main.rs  scene.rs  scene_registry.rs  test.rs
src/actions/: dialogue.rs  goto.rs  hovertext.rs  inventorychange.rs  mod.rs  print.rs  scenechange.rs  sequential.rs
