[package]
name = "interaction_system"
version = "0.1.0"
edition = "2021"
authors = ["HafiTheCat <https://github.com/HafiTheCat>"]
description = "small experimental interaction system"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
once_cell = "1.18.0"
